--- a/assignment1/assignment/src/app/menu/menu.component.html
+++ b/assignment1/assignment/src/app/menu/menu.component.html
@@ -1,6 +1,8 @@
-<nav>
-    <ul>
-        <li><a routerLink="login">Login</a></li>
-        <li><a routerLink="main">Main</a></li>
+<nav class='navbar bg-light'>
+    <ul class='navbar-nav'>
+        <li class="nav-item"><a class='btn btn-block' routerLink="login">Login</a></li>
+        <li class="nav-item"><a class='btn btn-block' routerLink="main">Main</a></li>
+        <li class="nav-item"><a class='btn btn-block' routerLink="settings">Settings</a></li>
     </ul>
 </nav>
+<button class='btn btn-block' (click)='logout()'>Logout</button>
