--- a/assignment1/assignment/src/app/settings/settings.component.html
+++ b/assignment1/assignment/src/app/settings/settings.component.html
@@ -63,7 +63,13 @@
           					Password:   
           				</label>
           				<input id='password' [(ngModel)]='new_password' type="password" name='new_password'>
-          			</div>			
+          			</div>
+          			<div class="form-group">
+          				<label for="password">
+          					Email:   
+          				</label>
+          				<input id='new_email' [(ngModel)]='new_email' type="text" name='new_email'>
+          			</div>          			
           			<div class="form-group">
           				<label for="new_role">Role:</label>
                     <select class="form-control" id="new_role" [(ngModel)]='new_role' name='new_role'>
@@ -275,7 +281,7 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<h5 class="modal-title" id="myModalLabel">
-								Edit User
+								Edit Group
 							</h5> 
 							<button type="button" class="close" data-dismiss="modal">
 								<span aria-hidden="true">×</span>
@@ -341,7 +347,7 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<h5 class="modal-title" id="myModalLabel">
-								Edit User
+								Edit Channel
 							</h5> 
 							<button type="button" class="close" data-dismiss="modal">
 								<span aria-hidden="true">×</span>
