finished api TODO front end

--- a/assignment1/assignment/src/app/menu/menu.component.html
+++ b/assignment1/assignment/src/app/menu/menu.component.html
@@ -1,7 +1,7 @@
 <nav class='navbar bg-light'>
     <ul class='navbar-nav'>
         <li class="nav-item"><a class='btn btn-block' routerLink="login">Login</a></li>
-        <li class="nav-item"><a class='btn btn-block' routerLink="main">Main</a></li>
+        <li class="nav-item"><a class='btn btn-block' routerLink="main">Profile</a></li>
         <li class="nav-item"><a class='btn btn-block' routerLink="settings">Settings</a></li>
     </ul>
 </nav>
