--- a/assignment1/assignment/src/app/main/main.component.html
+++ b/assignment1/assignment/src/app/main/main.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-4">
-		    <img width='100px' height='100px' src="assets/{{profile_image}}"/>
+		    <img width='100px' height='100px' src="{{profile_image}}"/>
             <table class="table table-striped table-bordered">
                 <tbody>
                     <tr>
