finished form validation, fixing up rest api

--- a/assignment1/assignment/src/app/chat-room/chat-room.component.html
+++ b/assignment1/assignment/src/app/chat-room/chat-room.component.html
@@ -10,7 +10,7 @@
           </ul>
         </div>
         <div class="col-md-10">
-          <table class="table table-striped table-bordered">
+          <table class="table table-striped table-bordered chat-table">
             <thead>
               <tr>
                 <th style="width: 25%" class="">Name</th>
