--- a/assignment1/assignment/src/app/login/login.component.html
+++ b/assignment1/assignment/src/app/login/login.component.html
@@ -5,30 +5,33 @@
 				<h2>
 					Login
 				</h2>
-                                <div class="container-fluid">
-                                	<div class="row">
-                                		<div class="col-md-12">
-                                			<form role="form" (submit)='loginUser($event)'>
-                                				<div class="form-group">
-                                					 
-                                					<label for="username">
-                                						Username:   
-                                					</label>
-                                					<input id='username' [(ngModel)]='username' name="username" type="text">
-                                				</div>
-                                				<div class="form-group">
-                                					<label for="password">
-                                						Password:   
-                                					</label>
-                                					<input id='password' [(ngModel)]='password' type="password" name='password'>
-                                				</div>				
-                                				<button type="submit" class="btn btn-primary">
-                                					Submit
-                                				</button>
-                                			</form>
-                                		</div>
-                                	</div>
-                                </div>
+                <div class="container-fluid">
+                	<div class="row">
+                		<div class="col-md-12">
+                			<form role="form" (submit)='loginUser($event)'>
+                				<div class="form-group">
+                					 
+                					<label for="username">
+                						Username:   
+                					</label>
+                					<input id='username' [(ngModel)]='username' name="username" type="text">
+                				</div>
+                				<div class="form-group">
+                					<label for="password">
+                						Password:   
+                					</label>
+                					<input id='password' [(ngModel)]='password' type="password" name='password'>
+                				</div>				
+                				<button type="submit" class="btn btn-primary">
+                					Submit
+                				</button>
+			        			<div *ngIf="form_has_errors" class="alert alert-danger">
+			      					{{formError}}
+			      				</div> 
+                			</form>
+                		</div>
+                	</div>
+                </div>
 			</div>
 		</div>
 	</div>
