--- a/assignment1/assignment/src/styles.css
+++ b/assignment1/assignment/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.chat-table{
+  display: block;
+  max-height: 700px;
+  overflow-y: auto;
+  -ms-overflow-style: -ms-autohiding-scrollbar;
+}
